--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "voice-recorder-with-reactjs",
+  "name": "recordvoice",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -13,7 +13,6 @@
     "firebase": "^8.10.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
